--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Framework"]
 	path = Root/Framework
-	url = file:///D:/Store/Cutie/Project.git
+	url = https://github.com/blank-org/cutie-framework.git
