Update project configuration and files

--- a/Root/.htaccess
+++ b/Root/.htaccess
@@ -6,6 +6,8 @@ RewriteBase /
 RewriteEngine On
 DirectorySlash Off
 
+RewriteRule ^$ - [R=404]
+
 RewriteRule ^(.+)/$ $1 [R=301]
 
 RewriteRule ^aboutme$ about_me [R=307,L]
